syntax = "proto3";

package ntt.api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/cloudwan/edgelq-sdk/common/api;api";
option java_multiple_files = true;
option java_package = "com.ntt.api.pb";

message Account {
  oneof account {
    User user = 2;

    ServiceAccount service_account = 3;
  }
}

message User {
  string email = 1;

  string access_token = 2 [ json_name = "access_token" ];

  string token_type = 3 [ json_name = "token_type" ];

  string refresh_token = 4 [ json_name = "refresh_token" ];

  google.protobuf.Timestamp expiry = 5;
}

message ServiceAccount {
  string type = 1;

  string client_email = 2 [ json_name = "client_email" ];

  string private_key_id = 3 [ json_name = "private_key_id" ];

  string private_key = 4 [ json_name = "private_key" ];
}
